sql/item_func.cc
@@ -420,13 +420,10 @@ void Item_args::propagate_equal_fields(THD *thd,
                                        const Item::Context &ctx,
                                        COND_EQUAL *cond)
 {
-  Item **arg,**arg_end;
-  for (arg= args, arg_end= args + arg_count; arg != arg_end; arg++)
-  {
-    Item *new_item= (*arg)->propagate_equal_fields(thd, ctx, cond);
-    if (new_item && *arg != new_item)
-      thd->change_item_tree(arg, new_item);
-  }
+  uint i;
+  for (i= 0; i < arg_count; i++)
+    args[i]->propagate_equal_fields_and_change_item_tree(thd, ctx, cond,
+                                                         &args[i]);
 }
 
 
